[tool.poetry]
name = "mediaserver-monitor"
version = "1.0.0"
description = "A python project that communicates with a MediaServer and displays the information on a 2.14 inch e-ink display"
authors = ["Dylon Condon <dyloncondon@gmail.com>"]
readme = ".github/README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
black = "^25.11.0"
flake8 = "^7.3.0"
pre-commit = "^4.4.0"
pytest = "^9.0.1"
pytest-mock = "^3.10.0"
pytest-env = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
    "src"
]
env = [
    "TAUTULLI_URL = some-url",
    "TAUTULLI_API_KEY = some-key"
]
